--- a/about.html
+++ b/about.html
@@ -46,11 +46,11 @@
 					</div>
 					
 					<p class="text-gray-300 text-lg sm:text-xl mb-6 sm:mb-8 leading-relaxed max-w-3xl mx-auto px-2">
-						皮特TV 是一个免费的在线视频搜索平台，提供视频搜索和播放服务，致力于为用户带来最佳体验。
+						皮特TV 是一个在线视频搜索平台，提供视频搜索和播放服务，致力于为用户带来最佳体验。
 					</p>
 					<div class="bg-[#1a1a1a] border border-[#333] rounded-lg sm:rounded-xl p-4 sm:p-6 max-w-2xl mx-auto">
 						<p class="text-gray-300 text-base sm:text-lg mb-4 px-1">
-							本项目代码托管在 GitHub 上，欢迎访问我们的仓库：
+							欢迎访问
 						</p>
 						<a href="https://github.com/LibreSpark/LibreTV" class="inline-flex items-center px-4 sm:px-6 py-2 sm:py-3 bg-gradient-to-r from-blue-500 to-cyan-500 hover:from-blue-600 hover:to-cyan-600 text-white text-sm sm:text-base font-medium rounded-lg transition-all duration-300 transform hover:scale-105" target="_blank" rel="noopener">
 							<svg class="w-4 h-4 sm:w-5 sm:h-5 mr-2" fill="currentColor" viewBox="0 0 24 24">
@@ -102,7 +102,7 @@
 								<div>
 									<h3 class="text-lg sm:text-xl font-semibold text-gray-200 mb-3 sm:mb-4">免责声明</h3>
 									<p class="text-gray-300 text-base sm:text-lg leading-relaxed">
-										皮特TV 仅提供视频搜索服务，不直接提供、存储或上传任何视频内容。所有搜索结果均来自第三方公开接口。用户在使用本站服务时，须遵守相关法律法规，不得利用搜索结果从事侵权行为，如下载、传播未经授权的作品等。
+										皮特TV 仅提供视频搜索服务，不直接提供、存储或上传任何视频内容。
 									</p>
 								</div>
 							</div>
@@ -156,7 +156,6 @@
                 <div class="text-center md:text-right">
                     <p class="text-gray-500 text-sm max-w-md">
                         免责声明：本站仅为视频搜索工具，不存储、上传或分发任何视频内容。
-                        所有视频均来自第三方API接口。如有侵权，请联系相关内容提供方。
                     </p>
                     <div class="mt-2 flex justify-center md:justify-end space-x-4">
                         <a href="/" class="text-gray-400 hover:text-white text-sm transition-colors">首页</a>
