--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>皮特TV - 免费在线视频搜索与观看平台</title>
-    <meta name="description" content="皮特TV是一个免费的在线视频搜索平台，无广告、安全，提供来自多个视频源的内容搜索与观看服务，无需注册即可使用。">
-    <meta name="keywords" content="在线视频,免费视频,视频搜索,电影,电视剧,皮特TV">
+    <title>皮特TV - 在线视频搜索与观看平台</title>
+    <meta name="description" content="皮特TV是一个在线视频搜索平台，无广告、安全，提供来自多个视频源的内容搜索与观看服务，无需注册即可使用。">
+    <meta name="keywords" content="在线视频,视频搜索,电影,电视剧,皮特TV">
     <meta name="author" content="LibreTV Team">
 
     <!-- Favicon -->
@@ -305,7 +305,6 @@
                 <div class="text-center md:text-right">
                     <p class="text-gray-500 text-sm max-w-md">
                         免责声明：本站仅为视频搜索工具，不存储、上传或分发任何视频内容。
-                        所有视频均来自第三方API接口。如有侵权，请联系相关内容提供方。
                     </p>
                     <div class="mt-2 flex justify-center md:justify-end space-x-4">
                         <a href="about.html" class="text-gray-400 hover:text-white text-sm transition-colors">关于我们</a>
@@ -361,7 +360,7 @@
                     欢迎使用 皮特TV。在开始使用前，请您了解并同意以下条款：
                 </p>
                 <p>
-                    <strong class="text-blue-400">服务性质：</strong>皮特TV 仅提供视频搜索服务，不直接提供、存储或上传任何视频内容。所有搜索结果均来自第三方公开接口。
+                    <strong class="text-blue-400">服务性质：</strong>皮特TV 仅提供视频搜索服务，不直接提供、存储或上传任何视频内容。
                 </p>
                 <p>
                     <strong class="text-blue-400">用户责任：</strong> 用户在使用本站服务时，须遵守相关法律法规，不得利用搜索结果从事侵权行为，如下载、传播未经授权的作品等。
@@ -398,7 +397,7 @@
         "@type": "WebSite",
         "name": "LibreTV",
         "url": "https://libretv.is-an.org/",
-        "description": "免费在线视频搜索与观看平台",
+        "description": "在线视频搜索与观看平台",
         "potentialAction": {
             "@type": "SearchAction",
             "target": "https://libretv.is-an.org/?s={search_term_string}",
